# RelaxSH

./: .gitignore  README.md  README_EN.md  pyproject.toml  setup.py
.github/workflows/: release.yml
packaging/: relaxsh.spec
src/relaxsh/: __init__.py  __main__.py  cli.py  display.py  games.py  i18n.py  library.py  reader.py
src/relaxsh/data/: demo.txt
tests/: test_cli.py  test_games.py  test_library.py
