[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "relaxsh"
version = "0.1.0"
description = "A cross-platform terminal slacking companion focused on novel reading."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "xgy" }]
keywords = ["terminal", "cli", "novel", "reader"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
release = [
  "build>=1.2",
  "pyinstaller>=6.0",
]
dev = [
  "build>=1.2",
  "pyinstaller>=6.0",
]

[project.scripts]
relaxsh = "relaxsh.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
relaxsh = ["data/*.txt"]

